--- a/18120018_18120061_18120062_18120533_18120543_Lab02/18120018_18120061_18120062_18120533_18120543_Lab02.vcxproj
+++ b/18120018_18120061_18120062_18120533_18120543_Lab02/18120018_18120061_18120062_18120533_18120543_Lab02.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GeometricTransformer.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
