convert + color transform with some fucking codes

--- a/18120018_18120061_18120062_18120533_18120543_Lab01/18120018_18120061_18120062_18120533_18120543_Lab01.vcxproj
+++ b/18120018_18120061_18120062_18120533_18120543_Lab01/18120018_18120061_18120062_18120533_18120543_Lab01.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Color.h" />
     <ClInclude Include="src\ColorTransformer.h" />
     <ClInclude Include="src\Converter.h" />
     <ClInclude Include="src\CV_Include.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Color.cpp" />
     <ClCompile Include="src\ColorTransformer.cpp" />
     <ClCompile Include="src\Converter.cpp" />
     <ClCompile Include="src\Main.cpp" />
