--- a/18120018_18120061_18120062_18120533_18120543_Lab01/18120018_18120061_18120062_18120533_18120543_Lab01.vcxproj.filters
+++ b/18120018_18120061_18120062_18120533_18120543_Lab01/18120018_18120061_18120062_18120533_18120543_Lab01.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="src\CV_Include.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Color.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Converter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Color.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
